Refactor database layer to use a new Database adapter class.